# cellular-automata--gif-gen

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  SPEC.md  build.gradle  pom.xml  settings.gradle  sim-gen.md
src/: config.rs  generator.rs  grid.rs  lib.rs  main.rs  render.rs  rule.rs  scheduler.rs  seed.rs  telegram.rs  web.rs
src/main/java/com/cellmachine/: CellMachineGeneratorApplication.java
src/main/java/com/cellmachine/config/: AppProperties.java  BindAddressCustomizer.java
src/main/java/com/cellmachine/generator/: CellCoordinate.java  GifWriter.java  Grid.java  Mp4Writer.java  Palette2D.java  RandomSimulationFactory.java  Rule.java  SeedService.java  SimulationDimensions.java  SimulationOptions.java  SimulationOutputFormat.java  SimulationResult.java  SimulationService.java
src/main/java/com/cellmachine/scheduler/: DailyScheduler.java
src/main/java/com/cellmachine/telegram/: TelegramService.java  TelegramWebhookController.java
src/main/java/com/cellmachine/telegram/bot/: ChatSession.java  ConversationStep.java  TelegramBotService.java  TelegramPollingRunner.java
src/main/java/com/cellmachine/telegram/dto/: InlineKeyboardButtonDto.java  InlineKeyboardMarkupDto.java  TelegramApiResponse.java  TelegramCallbackQueryDto.java  TelegramChatDto.java  TelegramMessageDto.java  TelegramUpdateDto.java  (+1 more)
src/main/java/com/cellmachine/web/: GenerateRequest.java  GenerateResponse.java  SeedCell.java  SimulationController.java
src/main/resources/: application.properties
src/test/java/com/cellmachine/generator/: GridTest.java  RuleTest.java  SeedServiceTest.java  SimulationOptionsSerializationTest.java  SimulationServiceTest.java
tests/: cli.rs  web.rs
