[package]
name = "cell-machine-gen-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
gif = "0.12"
rand = "0.8"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["clock", "std"] }
chrono-tz = "0.8"

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
tempfile = "3.10"
